# axiom-std

./: README.md  env.example  foundry.toml  package-lock.json  package.json  pnpm-lock.yaml  remappings.txt
.github/workflows/: test.yml
cli/: axiom-std-cli.ts  compile.ts  prove.ts  utils.ts
cli/sdkRs/: mockQueryArgs.ts
src/: AxiomCli.sol  AxiomTest.sol  AxiomV2Addresses.sol  AxiomVm.sol
test/: Array.t.sol  AverageBalance.t.sol  AxiomStd.t.sol  AxiomStdRs.t.sol  Base.t.sol  BaseCrosschain.t.sol  HashiCrosschain.t.sol
test/circuit/: array.circuit.ts  average.circuit.ts
test/circuit-rs/: .gitignore  Cargo.toml
test/circuit-rs/src/: account_age.rs  main.rs
test/example/: AccountAge.sol
